# pedantic-parakeet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/resolved/: mlx-audio-import-error.md  whisper-model-config.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-mlx-audio-backend/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
pedantic_parakeet/: __init__.py  audio.py  cli.py  formatters.py  language_bias.py  transcriber.py  types.py
pedantic_parakeet/backends/: __init__.py  base.py  mlx_audio.py  parakeet.py  registry.py
pedantic_parakeet/parakeet_mlx/: VENDORED.txt  __init__.py  alignment.py  attention.py  audio.py  cli.py  conformer.py  parakeet.py  utils.py
tests/: test_alignment.py  test_backends.py  test_cli.py  test_language_bias.py  test_parakeet.py
