[project]
name = "pedantic-parakeet"
version = "0.1.0"
description = "A CLI tool that will record your words exactly as spoken, including all the 'ums' and 'ahs'."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "parakeet-mlx>=0.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
pedantic-parakeet = "pedantic_parakeet.cli:app"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
