[project]
name = "pedantic-parakeet"
version = "0.1.0"
description = "A CLI tool that will record your words exactly as spoken, including all the 'ums' and 'ahs'."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.21.0",
    "numpy",
    "huggingface-hub",
    "dacite",
    "librosa",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
pedantic-parakeet = "pedantic_parakeet.cli:app"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
mlx-audio = ["mlx-audio>=0.2.5"]
all = ["mlx-audio>=0.2.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
